Add citations to atlas overviews in standalone visualization
- CIMA: Yin et al. (2026) Science with DOI link
- Inflammation: Jiménez-Gracia et al. (2026) Nature Medicine
- scAtlas: Shi et al. (2025) Nature

Matches citations shown in server atlas-detail.js

--- a/visualization/index.html
+++ b/visualization/index.html
@@ -651,7 +651,11 @@
                     </div>
                 </div>
                 <p style="color: #666; margin-top: 1rem; font-size: 0.9rem;">
-                    CIMA: Comprehensive immune monitoring atlas of healthy donors with matched blood biochemistry and plasma metabolomics data.
+                    CIMA: Chinese Immune Multi-omics Atlas - Comprehensive immune monitoring atlas of healthy donors with matched blood biochemistry and plasma metabolomics data.
+                </p>
+                <p class="citation" style="font-size: 0.85rem; color: #666; margin-top: 0.5rem;">
+                    <strong>Citation:</strong> Yin et al. (2026) <em>Science</em>.
+                    <a href="https://www.science.org/doi/10.1126/science.adt3130" target="_blank" rel="noopener">DOI: 10.1126/science.adt3130</a>
                 </p>
                 <div class="card" style="margin-top: 1rem;">
                     <div class="card-title">CIMA Analysis Data Sources</div>
@@ -692,6 +696,9 @@
                 </div>
                 <p style="color: #666; margin-top: 1rem; font-size: 0.9rem;">
                     Inflammation Atlas: Multi-disease cohort spanning RA, IBD, MS, SLE, and other inflammatory conditions with treatment response data.
+                </p>
+                <p class="citation" style="font-size: 0.85rem; color: #666; margin-top: 0.5rem;">
+                    <strong>Citation:</strong> Jiménez-Gracia et al. (2026) <em>Nature Medicine</em>.
                 </p>
                 <div class="card" style="margin-top: 1rem;">
                     <div class="card-title">Inflammation Atlas Analysis Data Sources</div>
@@ -736,6 +743,9 @@
                 </div>
                 <p style="color: #666; margin-top: 1rem; font-size: 0.9rem;">
                     scAtlas: Human Cell Atlas data spanning normal organs and pan-cancer datasets with detailed cell type annotations.
+                </p>
+                <p class="citation" style="font-size: 0.85rem; color: #666; margin-top: 0.5rem;">
+                    <strong>Citation:</strong> Shi et al. (2025) <em>Nature</em>. Cross-tissue multicellular coordination and its rewiring in cancer.
                 </p>
                 <div class="card" style="margin-top: 1rem;">
                     <div class="card-title">scAtlas Analysis Data Sources</div>
